--- a/projects/ToyProjects/education/animations.css
+++ b/projects/ToyProjects/education/animations.css
@@ -20,6 +20,15 @@
   }
 }
 
+@keyframes up_title {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(3px, 0);
+  }
+}
+
 @keyframes animateNavItems {
   0% {
     transform: rotateZ(-90deg) rotateX(90deg) scale(0.1);
