solidraw로 변환작업중

--- a/projects/ToyProjects/responsive-real-state-website-main/assets/css/styles.css
+++ b/projects/ToyProjects/responsive-real-state-website-main/assets/css/styles.css
@@ -34,7 +34,7 @@
 
   /*========== Font and typography ==========*/
   /*.5rem = 8px | 1rem = 16px ...*/
-  --body-font: 'Poppins', sans-serif;
+  --body-font: 'Pretendard';
   --biggest-font-size: 2.25rem;
   --h1-font-size: 1.5rem;
   --h2-font-size: 1.25rem;
@@ -107,6 +107,12 @@ button {
   font-family: var(--body-font);
   outline: none;
   border: none;
+}
+
+/* =======icon =========== */
+.bx-transfer-alt{
+  transform: rotate(35deg);
+  font-weight: var(--font-semi-bold);
 }
 
 /*=============== THEME ===============*/
@@ -217,7 +223,8 @@ body.dark-theme{
 }
 
 .main {
-  overflow: hidden; /* For the animations ScrollReveal*/
+  /* For the animations ScrollReveal */
+  overflow: hidden;
 }
 
 /*=============== HEADER & NAV ===============*/
@@ -773,14 +780,14 @@ body.dark-theme{
   row-gap: 2.5rem;
 }
 
-.foooter_logo{
+.footer__logo{
   color:var(--first-color);
   font-size: var(--h3-font-size);
   font-weight: var(--font-semi-bold);
   display: inline-flex;
   align-items: center;
   column-gap: .25rem;
-  background: .75rem;
+  margin-bottom: .75rem;
 }
 
 .footer__logo i{
@@ -805,7 +812,7 @@ body.dark-theme{
 
 .footer__title{
   font-size: var(--h3-font-size);
-  background: 1rem;
+  margin-bottom: 1rem;
 }
 
 .footer__links{
@@ -1035,6 +1042,209 @@ body.dark-theme{
   }
 }
 /* For large devices */
+@media screen and (min-width: 1023px){
+  .section{
+    padding: 7.5rem 0 1rem;
+  }
+  .section__title{
+    font-size: 2.25rem;
+  }
+  .section__subtitle{
+    font-size: var(--normal-font-size);
+  }
 
+  .nav{
+    height: calc(var(--header-height) + 1.5rem);
+  }
+  .nav__menu{
+    width: initial;
+    margin-left: auto;
+  }
+  .nav__list{
+    display: flex;
+    column-gap: 3rem;
+  }
+  .nav__link{
+    color: var(--text-color-light);
+  }
+  .nav__link i{
+    display: none;
+  }
+  .nav__button{
+    display:inline-block;
+  }
+
+  .active-link{
+    background: none;
+    box-shadow: none;
+    color: var(--first-color);
+    font-weight: var(--font-medium);
+  }
+
+  .change-theme{
+    margin: 0 3rem;
+    color:  var(--text-color-light);
+  }
+
+  .scroll-header .nav__link,
+  .scroll-header .change-theme{
+    color: var(--text-color);
+  }
+  .scroll-header .active-link{
+    color: var(--first-color);
+  }
+
+  .home{
+    padding-bottom: 0;
+  }
+  .home__container{
+    padding-top: 5rem;
+    column-gap: 2rem;
+  }
+  .home__data{
+    padding-bottom: 4rem;
+  }
+  .home_title{
+    margin-bottom: 2rem;
+  }
+  .home__description,
+  .home__search{
+    margin-bottom: 3rem;
+  }
+  .home__value{
+    column-gap: 3.5rem;
+  }
+  .home__orbe{
+    width:504px;
+    height:611px;
+    border-radius: 256px 256px 0 0;
+  }
+  .home__img{
+    width:472px;
+    height:634px;
+    border-radius: 236px 236px 12px 12px;
+    bottom: -2.5rem;
+  }
+  
+  .logos__img img{
+    height: 100px;
+  }
+
+  .popular__container{
+    padding-top: 3rem;
+  }
+  .popular__card{
+    width: 320px;
+    padding: .75rem .75rem 2rem;
+  }
+
+  .popular__data{
+    padding: 0 .25rem 0 .75rem;
+  }
+
+  .value__container,
+  .contact__container{
+    align-items: flex-start;
+    column-gap: 5rem;
+  }
+  .value__orbe,
+  .contact__orbe{
+    width: 501px;
+    height: 641px;
+    border-radius: 258px 258px 16px 16px;
+  }
+  .value__img,
+  .contact__img{
+    width: 461px;
+    height: 601px;
+    border-radius: 238px 238px 12px 12px;
+  }
+  .value__img img,
+  .contact__img img{
+    max-width: initial;
+    width: 490px;
+  }
+  .value__description,
+  .contact__description{
+    font-size: var(--normal-font-size);
+    margin-bottom: 2.5rem;
+  }
+
+  .value__accordion-title{
+    font-size: var(--normal-font-size);
+  }
+  .value__accordion-item{
+    padding: 1.25rem 1.25rem 1.25rem 1rem;
+  }
+  .value__accordion-description{
+    padding-bottom: 1rem;
+    font-size: var(--small-font-size);
+  }
+
+  .contact__card{
+    grid-template-columns: repeat(2, 200px);
+  }
+  .contact__card-box{
+    padding: 28px 1.5rem 1.5rem;
+  }
+
+  .subscribe__container{
+    padding: 4rem 10rem 4.5rem;
+    border-radius: 2rem;
+    border: 12px solid var(--first-color-light);
+  }
+  .subscribe__title{
+    font-size: 2.5rem;
+    margin-bottom: 1.5rem;
+  }
+  .subscribe__description{
+    font-size:var(--normal-font-size);
+    padding: 0 8rem;
+  }
+  .subscribe__button{
+    font-size: var(--normal-font-size);
+  }
+
+  .footer__content{
+    grid-template-columns: repeat(4, max-content);
+  }
+  .footer__title{
+    margin-bottom: 1.5rem;
+  }
+  .footer__links{
+    row-gap: 1rem;
+  }
+  .footer__info{
+    flex-direction: row;
+    justify-content: space-between;
+    padding-bottom: 2rem;
+  }
+
+  .show-scroll{
+    bottom: 3rem;
+    right: 3rem;
+  }
+}
+
+@media screen and (min-width: 1040px){
+  .container{
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .home__container{
+    column-gap: 4rem;
+  }
+}
 
 /* For 2K & 4K resolutions */
+@media screen and (min-width: 2048px){
+  body{
+    zoom: 1.2;
+  }
+}
+@media screen and (min-width: 3840px){
+  body{
+    zoom: 1.8;
+  }
+}
