--- a/projects/ToyProjects/responsive-real-state-website-main/assets/css/styles.css
+++ b/projects/ToyProjects/responsive-real-state-website-main/assets/css/styles.css
@@ -127,70 +127,6 @@ button {
   color: var(--first-color);
 }
 
-/*========== Variables Dark theme ==========*/
-body.dark-theme{
-  /*Color mode HSL(hue, saturation, lightness)*/
-  --first-color: hsl(228, 66%, 62%);
-  --second-color: hsl(25, 57%, 54%);
-  --title-color: hsl(228, 8%, 95%);
-  --text-color: hsl(228, 8%, 70%);
-  --border-color: hsl(228, 16%, 14%);
-  --body-color: hsl(228, 12%, 8%);
-  --container-color: hsl(228, 16%, 12%);
-}
-
-/*========== 
-    Color changes in some parts of 
-    the website, in dark theme 
-==========*/
-.dark-theme .home__search,
-.dark-theme .swiper-button-next,
-.dark-theme .swiper-button-prev{
-  border: 3px solid var(--border-color);
-}
-
-.dark-theme .popular__card:hover,
-.dark-theme .home__img,
-.dark-theme .nav__menu,
-.dark-theme .value__img,
-.dark-theme .accordion-open,
-.dark-theme .accordion-open .value__accordion-icon,
-.dark-theme .accordion-open .value__accordion-arrow,
-.dark-theme .conetact__img,
-.dark-theme .contact__card-box:hover,
-.dark-theme .scrollup{
-  box-shadow: none;
-}
-
-.dark-theme .value__orbe,
-.dark-theme .value__accordion-icon,
-.dark-theme .value__accordion-arrow,
-.dark-theme .contact__orbe,
-.dark-theme .contact__card i,
-.dark-theme .contact__card-button,
-.dark-theme .subscribe__container{
-  background-color: var(--container-color);
-}
-
-.dark-theme .subscribe__container{
-  border: 6px  solid var(--border-color);
-}
-
-.dark-theme .subscribe__description{
-  color: var(--text-color);
-}
-
-.dark-theme::-webkit-scrollbar{
-  background-color: hsl(228, 4%, 15%);
-}
-
-.dark-theme::-webkit-scrollbar-thumb{
-  background-color: hsl(228, 4% ,25%);
-}
-
-.dark-theme::-webkit-scrollbar-thumb:hover{
-  background-color: hsl(228, 4% ,35%);
-}
 
 /*=============== REUSABLE CSS CLASSES ===============*/
 .container {
@@ -250,12 +186,13 @@ body.dark-theme{
   display: inline-flex;
   align-items: center;
   column-gap: .25rem;
-  font-weight: var(--font-medium);
+  font-family: "Montserrat", sans-serif;
+  font-weight: var(--font-semi-bold);
   transition: .3s;
 }
 
 .nav__logo i{
-  font-size: 1rem;
+  font-size: 1.3rem;
 }
 
 .nav__logo:hover{
@@ -325,9 +262,12 @@ body.dark-theme{
 
 /*=============== HOME ===============*/
 .home{
-  background:linear-gradient(170deg,
+  background: linear-gradient(170deg,
+  hsl(228,50%,22%)0%,
+  hsl(0,0%,6%)55%);
+  /* background:linear-gradient(170deg,
             hsl(0,0%,22%)0%,
-            hsl(0,0%,6%)30%);
+            hsl(0,0%,6%)30%); */
   padding-bottom: 0;
 }
 
@@ -376,6 +316,15 @@ body.dark-theme{
   margin-left: .5rem;
 }
 
+#fileName {
+  width: 90%;
+  background-color: var(--body-color);
+  color: var(--text-color);
+  margin-right: .5rem;
+  margin-left: .5rem;
+  font-size: var(--small-font-size);
+}
+
 .home__search-input::placeholder{
   color: var(--text-color-light);
 }
@@ -409,6 +358,28 @@ body.dark-theme{
 .home__orbe{
   width: 265px;
   height: 284px;
+  /* background: linear-gradient(180deg,
+              hsl(0,0%,16%) 93%,
+              hsl(0,0%,67%) 100%); */
+  border-radius: 12px 12px 12px 12px;
+  
+}
+
+.home__img{
+  position: absolute;
+  width:300px;
+  height:auto;
+  overflow: hidden;
+  /* border-radius: 12px 12px 12px 12px; */
+  display: inline-flex;
+  align-items: flex-end;
+  bottom:-1.5rem;
+  /* box-shadow: 0 16px 32px hsla(228,66%,25%,.25); */
+}
+/* 
+.home__orbe{
+  width: 265px;
+  height: 284px;
   background: linear-gradient(180deg,
               hsl(0,0%,16%) 93%,
               hsl(0,0%,67%) 100%);
@@ -425,7 +396,7 @@ body.dark-theme{
   align-items: flex-end;
   bottom:-1.5rem;
   box-shadow: 0 16px 32px hsla(228,66%,25%,.25);
-}
+} */
 /*=============== BUTTON ===============*/
 .button{
   display: inline-block;
@@ -450,6 +421,7 @@ body.dark-theme{
 .nav__button{
   display: none;
 }
+
 
 /*=============== LOGOS ===============*/
 .logos__container{
@@ -554,20 +526,20 @@ body.dark-theme{
 
 .value__orbe{
   width: 266px;
-  height: 316px;
+  height: 300px;
   background-color: hsl(228, 24%, 97%);
   border-radius: 135px 135px 16px 16px;
 }
 
 .value__img{
   position:absolute;
-  width: 250px;
-  height: 300px;
+  width: 300px;
+  height: auto;
   overflow:hidden;
-  border-radius: 125px 125px 12px 12px;
+  /* border-radius: 125px 125px 12px 12px; */
   inset: 0;
   margin: auto;
-  box-shadow: 0 16px 32px hsla(228,66%,25%,.25);
+  /* box-shadow: 0 16px 32px hsla(228,66%,25%,.25); */
 }
 
 .value__description{
@@ -662,20 +634,20 @@ body.dark-theme{
 
 .contact__orbe{
   width: 266px;
-  height: 316px;
+  height: 300px;
   background-color: hsl(228, 24%, 97%);
   border-radius: 135px 135px 16px 16px;
 }
 
 .contact__img{
   position: absolute;
-  width: 250px;
-  height: 300px;
+  width: 300px;
+  height: auto;
   overflow: hidden;
-  border-radius: 125px 125px 12px 12px;
+  /* border-radius: 125px 125px 12px 12px; */
   inset: 0;
   margin: auto;
-  box-shadow: 0 16px 32px hsla(228,66%,25%,.25);
+  /* box-shadow: 0 16px 32px hsla(228,66%,25%,.25); */
 }
 
 .contact__description{
@@ -782,6 +754,7 @@ body.dark-theme{
 
 .footer__logo{
   color:var(--first-color);
+  font-family: "Montserrat", sans-serif;
   font-size: var(--h3-font-size);
   font-weight: var(--font-semi-bold);
   display: inline-flex;
@@ -825,6 +798,7 @@ body.dark-theme{
 }
 
 .footer__link:hover{
+  text-decoration-line: underline;
   color:var(--title-color);
 }
 
@@ -868,6 +842,10 @@ body.dark-theme{
   column-gap: 1.25rem;
 }
 
+.footer__privacy a:hover{
+  text-decoration-line: underline;
+}
+
 /*=============== SCROLL BAR ===============*/
 ::-webkit-scrollbar{
   width: .6rem;
@@ -908,343 +886,4 @@ body.dark-theme{
 /* Show Scroll Up*/
 .show-scroll{
   bottom: 8rem;
-}
-
-/*=============== BREAKPOINTS ===============*/
-/* For small devices */
-@media screen and (max-width: 350px){
-  .container{
-    margin-left: 1rem;
-    margin-right: 1rem;
-  }
-
-  .section{
-    padding: 3.5rem 0 1rem;
-  }
-
-  .home{
-     padding-bottom: 0;
-  }
-
-  .contact__card{
-    grid-template-columns: repeat(1, 180px);
-    justify-content: center;
-  }
-}
-@media screen and (max-width: 320px){
-  .nav__menu{
-    padding: 1.3rem 1.5rem;
-  }
-
-  .home__value{
-    column-gap: 1rem;
-  }
-
-  .home__img{
-    width: 220px;
-    height: 280px;
-  }
-
-  .home__orbe{
-    width: 240px;
-    height: 264px;
-  }
-
-  .logos__container{
-    gap: 2rem 1rem;
-  }
-
-  .popular__card{
-    width: 230px;
-    padding: .5rem .5rem .75rem;
-  }
-
-  .value__img,
-  .contact__img{
-    width: 220px;
-    height: 260px;
-  }
-
-  .value__orbe,
-  .contact__orbe{
-    width: 236px;
-    height: 280px;
-  }
-
-  .subscribe__container{
-    padding: 2rem 1rem;
-  }
-
-  .footer__content{
-    gap: 2.5rem;
-  }
-}
-
-/* For medium devices */
-@media screen and (min-width: 576px){
-  .nav__menu{
-    width: 342px;
-  }
-
-  .home__search{
-    width: 412px;
-  }
-
-  .contact__card{
-    grid-template-columns: repeat(2, 192px);
-    justify-content: center;
-  }
-
-  .footer__content{
-    grid-template-columns: repeat(3, max-content);
-  }
-}
-
-@media screen and (min-width: 767px){
-  .home__container {
-    grid-template-columns: repeat(2, 1fr);
-    padding-top: 2rem;
-  }
-
-  .home__orbe{
-    align-self: flex-end;
-  }
-  .home__data{
-    padding-bottom: 2rem;
-  }
-
-  .logos__container{
-    grid-template-columns: repeat(4, max-content);
-    justify-content: center;
-  }
-
-  .value__container,
-  .contact__container{
-    grid-template-columns: repeat(2, 1fr);
-    align-items: center;
-  }
-
-  .contact__images{
-    order: 1;
-  }
-
-  .contact__card{
-    justify-content: initial;
-  }
-
-  .subscribe__container{
-    padding:3rem 13rem;
-  }
-
-  .footer__container{
-    grid-template-columns: repeat(2, max-content);
-    justify-content: space-between;
-  }
-}
-/* For large devices */
-@media screen and (min-width: 1023px){
-  .section{
-    padding: 7.5rem 0 1rem;
-  }
-  .section__title{
-    font-size: 2.25rem;
-  }
-  .section__subtitle{
-    font-size: var(--normal-font-size);
-  }
-
-  .nav{
-    height: calc(var(--header-height) + 1.5rem);
-  }
-  .nav__menu{
-    width: initial;
-    margin-left: auto;
-  }
-  .nav__list{
-    display: flex;
-    column-gap: 3rem;
-  }
-  .nav__link{
-    color: var(--text-color-light);
-  }
-  .nav__link i{
-    display: none;
-  }
-  .nav__button{
-    display:inline-block;
-  }
-
-  .active-link{
-    background: none;
-    box-shadow: none;
-    color: var(--first-color);
-    font-weight: var(--font-medium);
-  }
-
-  .change-theme{
-    margin: 0 3rem;
-    color:  var(--text-color-light);
-  }
-
-  .scroll-header .nav__link,
-  .scroll-header .change-theme{
-    color: var(--text-color);
-  }
-  .scroll-header .active-link{
-    color: var(--first-color);
-  }
-
-  .home{
-    padding-bottom: 0;
-  }
-  .home__container{
-    padding-top: 5rem;
-    column-gap: 2rem;
-  }
-  .home__data{
-    padding-bottom: 4rem;
-  }
-  .home_title{
-    margin-bottom: 2rem;
-  }
-  .home__description,
-  .home__search{
-    margin-bottom: 3rem;
-  }
-  .home__value{
-    column-gap: 3.5rem;
-  }
-  .home__orbe{
-    width:504px;
-    height:611px;
-    border-radius: 256px 256px 0 0;
-  }
-  .home__img{
-    width:472px;
-    height:634px;
-    border-radius: 236px 236px 12px 12px;
-    bottom: -2.5rem;
-  }
-  
-  .logos__img img{
-    height: 100px;
-  }
-
-  .popular__container{
-    padding-top: 3rem;
-  }
-  .popular__card{
-    width: 320px;
-    padding: .75rem .75rem 2rem;
-  }
-
-  .popular__data{
-    padding: 0 .25rem 0 .75rem;
-  }
-
-  .value__container,
-  .contact__container{
-    align-items: flex-start;
-    column-gap: 5rem;
-  }
-  .value__orbe,
-  .contact__orbe{
-    width: 501px;
-    height: 641px;
-    border-radius: 258px 258px 16px 16px;
-  }
-  .value__img,
-  .contact__img{
-    width: 461px;
-    height: 601px;
-    border-radius: 238px 238px 12px 12px;
-  }
-  .value__img img,
-  .contact__img img{
-    max-width: initial;
-    width: 490px;
-  }
-  .value__description,
-  .contact__description{
-    font-size: var(--normal-font-size);
-    margin-bottom: 2.5rem;
-  }
-
-  .value__accordion-title{
-    font-size: var(--normal-font-size);
-  }
-  .value__accordion-item{
-    padding: 1.25rem 1.25rem 1.25rem 1rem;
-  }
-  .value__accordion-description{
-    padding-bottom: 1rem;
-    font-size: var(--small-font-size);
-  }
-
-  .contact__card{
-    grid-template-columns: repeat(2, 200px);
-  }
-  .contact__card-box{
-    padding: 28px 1.5rem 1.5rem;
-  }
-
-  .subscribe__container{
-    padding: 4rem 10rem 4.5rem;
-    border-radius: 2rem;
-    border: 12px solid var(--first-color-light);
-  }
-  .subscribe__title{
-    font-size: 2.5rem;
-    margin-bottom: 1.5rem;
-  }
-  .subscribe__description{
-    font-size:var(--normal-font-size);
-    padding: 0 8rem;
-  }
-  .subscribe__button{
-    font-size: var(--normal-font-size);
-  }
-
-  .footer__content{
-    grid-template-columns: repeat(4, max-content);
-  }
-  .footer__title{
-    margin-bottom: 1.5rem;
-  }
-  .footer__links{
-    row-gap: 1rem;
-  }
-  .footer__info{
-    flex-direction: row;
-    justify-content: space-between;
-    padding-bottom: 2rem;
-  }
-
-  .show-scroll{
-    bottom: 3rem;
-    right: 3rem;
-  }
-}
-
-@media screen and (min-width: 1040px){
-  .container{
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .home__container{
-    column-gap: 4rem;
-  }
-}
-
-/* For 2K & 4K resolutions */
-@media screen and (min-width: 2048px){
-  body{
-    zoom: 1.2;
-  }
-}
-@media screen and (min-width: 3840px){
-  body{
-    zoom: 1.8;
-  }
 }
