--- a/projects/ToyProjects/responsive-real-state-website-main/assets/css/upload.css
+++ b/projects/ToyProjects/responsive-real-state-website-main/assets/css/upload.css
@@ -4,8 +4,7 @@
     justify-content: center;
     align-items: center;
     position: absolute;
-    width: 100%;
-    height: 100%;
+    height: auto;
 }
 
 #upload__button {
